# ChangeLog for sci-libs/hdf
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/hdf/ChangeLog,v 1.11 2009/04/16 22:16:12 bicatali Exp $

  16 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  Re-manifesting for good patch this time - Also updated description.

*hdf-4.2_p4 (16 Apr 2009)

  16 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -files/hdf-4.2.1_p4-maxavailfiles.patch,
  -files/hdf-4.2.1_p4-shared-libs.patch, +hdf-4.2_p4.ebuild,
  -hdf-4.2.1_p4.ebuild:
  Version bump (4.2.1_p4 was wrongly named. Many patches applied for
  fortran, fixing as-needed, and for ppc, s390 and sparc to work (some taken
  from Fedora). Added netcdf flag which will install the ncdump and ncgen
  but renamed to nc*-hdf.

*hdf-4.2.1_p4 (18 Aug 2007)

  18 Aug 2007; Sébastien Fabbro <bicatali@gentoo.org>
  +files/hdf-4.2.1_p4-maxavailfiles.patch, 
  +files/hdf-4.2.1_p4-shared-libs.patch, metadata.xml, -hdf-4.2.0-r3.ebuild,
  +hdf-4.2.1_p4.ebuild:
  Version bump with new patches and cleanup (bug #186524, thanks Ryan May) and
  removed buggy version (bug #160051)

  23 Nov 2006; Tobias Scherbaum <dertobi123@gentoo.org> hdf-4.2.0-r4.ebuild:
  ppc stable, bug #153700

  01 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> hdf-4.2.0-r4.ebuild:
  Stable on amd64/x86 wrt bug #153700.

  01 Nov 2006; Donnie Berkholz <dberkholz@gentoo.org>; ChangeLog:
  Update for my nick change spyderous -> dberkholz.

  04 Jun 2006; Donnie Berkholz <dberkholz@gentoo.org>; hdf-4.2.0-r4.ebuild:
  (#135178) Fix gcc4 build by passing F77 to configure. Also add FORTRAN
  setting, and use autotools eclass rather than running stuff by hand.

*hdf-4.2.0-r4 (01 Oct 2005)

  01 Oct 2005; Olivier Fisette <ribosome@gentoo.org> +hdf-4.2.0-r4.ebuild:
  Ebuild clean-up, and removal of unneeded dependency "sci-libs/netcdf" (fixes
  bug #96187).

  25 Jan 2005; Danny van Dyk <kugelfang@gentoo.org>