@@ -2,7 +2,7 @@ AUX hdf-4.2.0-shared-libs.patch 17794 RMD160 d1557665ab6fd48b7ce6780e4d910042c6b
 DIST HDF4.2r4.tar.gz 3914118 RMD160 13274858f1fa0c339fab83b1f9c37314bd10d624 SHA1 000fa1be9c355c490cceed786feeb269a0d355a7 SHA256 39695c85e15c391e589cfdcb98ecc9a72fbb7447f0575bff4d030d53a62e689d
 DIST hdf-4.2_p4-patches.tar.bz2 6714 RMD160 9070fb9ef8615bbe98a1dbef2ef030a5bebe7111 SHA1 ae447e5427467994bd7988b4c753a111f8d9c0e9 SHA256 0c7f976db032246dac7f4cc8f131e1983a4154179241ce2cc66eaf36bb62845e
 DIST hdf4.2r0.tar.gz 3738135 RMD160 b0a32930d85045d750ee3ef8a717c583946d6f9d SHA1 1b9feb2bfb34458b5af45b5c2d905f017c49033a SHA256 8e18fe97ae6c2f3c9135c9f4d2f26647e4dbb5a1ec7429f59647532cabbe07f5
-EBUILD hdf-4.2.0-r4.ebuild 2125 RMD160 7b7e5f54325ee65981ec0b66ed8e2d037313d059 SHA1 f9a865979dc976a3c01635391f3653f01abb20b1 SHA256 6ab9c7077ef954d5ea6e350e689bfff77cc83b459e29ad2b5a2412679ba8b45c
+EBUILD hdf-4.2.0-r4.ebuild 2567 RMD160 70fa4de46c5509af8aefb4ee6abcd2fe5f7c61dd SHA1 e71fbb28df62f8bc05d16e31c74525c4fb6de1ec SHA256 641344ea5ad07dd5fec92ea2d24c81de813d471c2b959b2edf77bbae4c5e13a4
 EBUILD hdf-4.2_p4.ebuild 2003 RMD160 27856f90bd9b2fa4d2f045906a3d3c244e0b380e SHA1 940f7f8cb477c3b852b34183b4263515fb1e210d SHA256 08c8c83a7ac2b2acff3f2b608016595692cea82556e127c6293b5bc5a3d86ec2
-MISC ChangeLog 3165 RMD160 7adf95d3832a1c3512625e67165bb4db09cb9bbd SHA1 16e6db6b8d3d93565e102ed6f960651f0f70bb66 SHA256 0895a076dd06ab4fb81748fd23f97c43729d442348967d287c7abf4427095ab5
+MISC ChangeLog 3283 RMD160 a80582775d66270c08eda64c689d184f633c8eb4 SHA1 67ede67ecf5bfee66c64eb7992eb72aa88a4a02e SHA256 64273ba5fdceac51205e508b50ebdd0cc22127a84188a3d1b7cde7f8a295f31d
 MISC metadata.xml 760 RMD160 4ef5d149f44169242bf9425d6c0b3a2e512fe0a1 SHA1 4c0c294751b93851300fd03ea9121f6d9f36a8d2 SHA256 a753e7be3b3935681d6aa925d90c6eff98d764b8a8dbf30ed0dfc4046df39def
